added text and images

--- a/markdown/Dominik.md/GridExample.html
+++ b/markdown/Dominik.md/GridExample.html
@@ -31,8 +31,8 @@
 
         .twitter {
             display: grid;
-            grid-template-columns: 1fr 1fr 1fr;
-            grid-template-rows: 100%;
+            grid-template-columns: 1fr;
+            grid-template-rows: 1fr 1fr 1fr;
             height: 100%;
             grid-gap: 1em;
             padding: 1em;
